--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row align-items-center">
           <!-- Opcional: Imagen de perfil -->
           <div class="col-md-3 text-center mb-4 mb-md-0">
-            <img src="../assets/foto.jpg" alt="Foto de perfil" width="150">
+            <img src="assets/foto.jpg" alt="Foto de perfil" width="150">
             <p>Foto de perfil</p>
           </div>
 
@@ -64,3 +64,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
