--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </ul>
 
             <!-- BOTÓN CV -->
-            <a href="../assets/CVIvanCambiaso.pdf" class="btn btn-light mt-4" target="_blank" download>
+            <a href="assets/CVIvanCambiaso.pdf" class="btn btn-light mt-4" target="_blank" download>
               <i class="fa fa-download me-2"></i> Descargar CV
             </a>
           </div>
@@ -64,4 +64,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
 
