Descripción de los cambios realizados

--- a/Htmls2/analisisDeDatos.html
+++ b/Htmls2/analisisDeDatos.html
@@ -52,6 +52,31 @@
 
         <!-- DASHBOARD PROVINCIA -->
         <div class="mb-4">
+          <h5>🌐 Dashboard ONU</h5>
+          <p class="mb-3 text-muted"> Creado para viasaulizar datos particulares de todos los países miembros de la ONU</p>
+          <p>
+            <a class="btn btn-outline-primary" data-bs-toggle="collapse" href="#dashboardONU" role="button" aria-expanded="false" aria-controls="dashboardONU">
+              👁️ Click aquí para ver
+            </a>
+          </p>
+          <div class="collapse" id="dashboardONU">
+            <div class="card card-body">
+              <img src="../assets/ONU/Principal.png" alt="Dashboard ONU" class="img-fluid rounded shadow mb-3">
+              <img src="../assets/ONU/Dos.png" alt="Dashboard ONU" class="img-fluid rounded shadow mb-3">
+              <img src="../assets/ONU/Dobles.png" alt="Dashboard ONU" class="img-fluid rounded shadow">
+              
+              <img src="../assets/ONU/Soberania.png" alt="Dashboard ONU" class="img-fluid rounded shadow">
+              
+              <img src="../assets/ONU/Quinto.png" alt="Dashboard ONU" class="img-fluid rounded shadow">
+            </div>
+          </div>
+        </div>
+
+
+
+
+        <!-- DASHBOARD PROVINCIA -->
+        <div class="mb-4">
           <h5>🌍 Dashboard de Provincia de Buenos Aires</h5>
           <p class="mb-3 text-muted"> Dashboard creado para visualizar datos de la provincia de Buenos Aires como así demostrar a que partido político pertence cada intendente</p>
           <p>
