Agregado dashboard no autonomos

--- a/Htmls2/analisisDeDatos.html
+++ b/Htmls2/analisisDeDatos.html
@@ -93,6 +93,34 @@
           </div>
         </div>
 
+        
+        <!-- DASHBOARD PROVINCIA -->
+        <div class="mb-4">
+          <h5>🌍 Dashboard de territorios no autónomos</h5>
+          <p class="mb-3 text-muted"> Relevamiento realizado sobre todos los territorios no autónomos existentes</p>
+          <p>
+            <a class="btn btn-outline-primary" data-bs-toggle="collapse" href="#dashboardTerritorios" role="button" aria-expanded="false" aria-controls="dashboardTerritorios">
+              👁️ Click aquí para ver
+            </a>
+          </p>
+          <div class="collapse" id="dashboardTerritorios">
+            <div class="card card-body">
+              <img src="../assets/NoAutonomos/Intro.png" alt="Dashboard Territorios" class="img-fluid rounded shadow mb-3">
+              <img src="../assets/NoAutonomos/Listado.png"Dashboard Provincia" class="img-fluid rounded shadow mb-3">
+              <img src="../assets/NoAutonomos/Comienyo.png" alt="Dashboard Territorios class="img-fluid rounded shadow">
+              <img src="../assets/NoAutonomos/Torta.png" alt="Dashboard Territorios class="img-fluid rounded shadow">
+              <img src="../assets/NoAutonomos/Columnas.png" alt="Dashboard Territorios class="img-fluid rounded shadow">
+              <img src="../assets/NoAutonomos/Extras.png" alt="Dashboard Territorios class="img-fluid rounded shadow">
+              <img src="../assets/NoAutonomos/Texto.png" alt="Dashboard Territorios class="img-fluid rounded shadow">
+            </div>
+          </div>
+        </div>
+
+
+        
+
+
+
         <!-- DASHBOARD INDUSTRIAL -->
         <div class="mb-4">
           <h5>🏭 Dashboard Industrial</h5>
